--- a/campusServer/Gemfile
+++ b/campusServer/Gemfile
@@ -46,5 +46,7 @@ group :development do
 end
 
 group :test do
-  gem 'minitest-reporters'
+  gem 'minitest-reporters', '1.0.5'
+  gem 'mini_backtrace',     '0.1.3'
+  gem 'guard-minitest',     '2.3.1'
 end
