--- a/campusServer/test/fixtures/users.yml
+++ b/campusServer/test/fixtures/users.yml
@@ -1,11 +1,6 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  name: MyString
-  email: MyString
-  password: MyString
-
-two:
-  name: MyString
-  email: MyString
-  password: MyString
+tyler:
+  name: Tyler Example
+  email: tyler@example.com
+  password_digest: <%= User.digest('password') %>
