--- a/campusServer/test/fixtures/users.yml
+++ b/campusServer/test/fixtures/users.yml
@@ -4,3 +4,8 @@ tyler:
   name: Tyler Example
   email: tyler@example.com
   password_digest: <%= User.digest('password') %>
+
+archer:
+  name: Sterling Archer
+  email: duchess@example.gov
+  password_digest: <%= User.digest('password') %>
