--- a/campusServer/test/fixtures/groups.yml
+++ b/campusServer/test/fixtures/groups.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  groupName: MyString
+  groupname: MyString
   description: MyString
 
 two:
-  groupName: MyString
+  groupname: MyString
   description: MyString
