Added user parameters, updated fixtures, fixed tests

--- a/campusServer/test/fixtures/users.yml
+++ b/campusServer/test/fixtures/users.yml
@@ -12,7 +12,6 @@ tyler:
   hometown: Sykesville,MD
   age: 24
   gender: male
-  inbox: empty inbox
 
 archer:
   username: SterlingArcher
@@ -20,10 +19,50 @@ archer:
   password_digest: <%= User.digest('password') %>
   firstname: Sterling
   lastname: Archer
-  birthday: 1948-7-15
+  birthday: 1970-7-15
   bio: this is my bio
   major: spying
-  hometown: BFE,PA
-  age: 76
+  hometown: York,PA
+  age: 45
   gender: male
-  inbox: empty inbox
+
+lana:
+  username: LanaKane
+  email: hands@example.gov
+  password_digest: <%= User.digest('password') %>
+  firstname: Lana
+  lastname: Kane
+  birthday: 1970-10-15
+  bio: this is my bio
+  major: spying
+  hometown: York,PA
+  age: 45
+  gender: female
+
+mallory:
+  username: Mallory Archer
+  email: boss@example.gov
+  password_digest: <%= User.digest('password') %>
+  firstname: Mallory
+  lastname: Archer
+  birthday: 1950-3-15
+  bio: this is my bio
+  major: spying
+  hometown: York,PA
+  age: 65
+  gender: female
+
+<% 30.times do |n| %>
+user_<%= n %>:
+  username:  <%= "User #{n}" %>
+  email: <%= "user-#{n}@example.com" %>
+  password_digest: <%= User.digest('password') %>
+  firstname: firstname
+  lastname: lastname
+  birthday: 1990-01-01
+  bio: bio
+  major: major
+  hometown: York,PA
+  age: 25
+  gender: male
+<% end %>
