--- a/campusServer/test/fixtures/microposts.yml
+++ b/campusServer/test/fixtures/microposts.yml
@@ -1,47 +1,47 @@
 
 orange:
   content: "I just ate an orange!"
-  created_at: <%= 10.minutes.ago %>
+  created_at: <%= Time.zone.now.to_datetime %>
   user: tyler
 
 tau_manifesto:
   content: "Check out the @tauday site by @mhartl: http://tauday.com"
-  created_at: <%= 3.years.ago %>
+  created_at: <%= Time.zone.now.to_datetime %>
   user: tyler
 
 cat_video:
   content: "Sad cats are sad: http://youtu.be/PKffm2uI4dk"
-  created_at: <%= 2.hours.ago %>
+  created_at: <%= Time.zone.now.to_datetime %>
   user: tyler
 
 most_recent:
   content: "Writing a short test"
-  created_at: <%= Time.zone.now %>
+  created_at: <%= Time.zone.now.to_datetime %>
   user: tyler
 
 <% 30.times do |n| %>
 micropost_<%= n %>:
   content: <%= Faker::Lorem.sentence(5) %>
-  created_at: <%= 42.days.ago %>
+  created_at: <%= Time.zone.now.to_datetime %>
   user: tyler
 <% end %>
 
 ants:
   content: "Oh, is that what you want? Because that's how you get ants!"
-  created_at: <%= 2.years.ago %>
+  created_at: <%= Time.zone.now.to_datetime %>
   user: archer
 
 zone:
   content: "Danger zone!"
-  created_at: <%= 3.days.ago %>
+  created_at: <%= Time.zone.now.to_datetime %>
   user: archer
 
 tone:
   content: "I'm sorry. Your words made sense, but your sarcastic tone did not."
-  created_at: <%= 10.minutes.ago %>
+  created_at: <%= Time.zone.now.to_datetime %>
   user: lana
 
 van:
   content: "Dude, this van's, like, rolling probable cause."
-  created_at: <%= 4.hours.ago %>
+  created_at: <%= Time.zone.now.to_datetime %>
   user: lana
