Added group events

--- a/campusServer/config/database.yml
+++ b/campusServer/config/database.yml
@@ -5,7 +5,7 @@ development:
   database: campusApp_development
   pool: 5
   username: root
-  password: campusu
+  password:
   socket: /tmp/mysql.sock
 
 # Test
