Added private messages model and controller classes

--- a/campusServer/config/database.yml
+++ b/campusServer/config/database.yml
@@ -5,7 +5,7 @@ development:
   database: campusApp_development
   pool: 5
   username: root
-  password:
+  password: campusu
   socket: /tmp/mysql.sock
 
 # Test
