Added routes and methods for getSenders and getMessages

--- a/test/fixtures/private_messages.yml
+++ b/test/fixtures/private_messages.yml
@@ -1,13 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  sender_id: 1
+  user_id: 1
   receiver_id: 1
   body: MyString
   unread: 1
 
 two:
-  sender_id: 1
+  user_id: 1
   receiver_id: 1
   body: MyString
   unread: 1
